--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,14 @@
 .App {
   color: white;
   text-align: center;
+  padding: 1rem;
 }
 
 .container {
   width: 15rem;
   height: 15rem;
   background-color: green;
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
