--- a/frontend/src/components/Personalized/Personalized.css
+++ b/frontend/src/components/Personalized/Personalized.css
@@ -11,7 +11,7 @@
     padding: 40px 20px;
     text-align: center;
     gap: 20px;
-    background-image: url("../images/greenback.jpg");
+    background-image: url("../../../images/greenback.jpg");
   }
   
   .personalize-section h1 {
