--- a/frontend/src/components/ListHome/ListHome.css
+++ b/frontend/src/components/ListHome/ListHome.css
@@ -1,10 +1,18 @@
 /* ListHome.css */
 
 .list-home {
+
+    min-height: 700px;
     padding: 20px;
     background-color: #f9f9f9;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    background-image: url("../../../images/greenback.jpg");
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease;
+
+    
+
 }
 
 h1 {
